Change wechat share description

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="一品蟹煌阳澄湖大闸蟹专卖">
+    <meta property="og:description" content="正宗昆山阳澄湖大闸蟹厂家直销">
+    <meta property="og:image" content="https://xie.2cn.io/favicon-32x32.png">
+    <meta property="og:url" content="https://xie.2cn.io/">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
